<resources>
    <string name="app_name">我游</string>

    <string name="main_want">想去</string>
    <string name="main_city_tour">周边游</string>
    <string name="main_find">发现</string>
    <string name="main_im">消息</string>
    <string name="main_mine">我的</string>

    <string name="input_content">内容不能为空</string>
    <string name="history_record">清空历史记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- 登录与注册 -->
    <string name="user_name">用户名</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password_login">用户密码登录</string>
    <string name="active_password_login">动态密码登录</string>
    <string name="forget_password">忘记密码?</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="school_title_name">user</string>
    <string name="back">返回</string>
    <string name="send">发送</string>

</resources>
